# indian-stock-analysis

./: Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
src/crew/: .env  api.py  conversation_crew.py  main.py  ui.py
src/crew/config/: agents.yaml  tasks.yaml
src/crew/tools/: fmptool.py  nse_tools.py  save_api_responses.py  simple_test.py  test.py
src/crew/tools/api_responses/: 52_week_high_low.json  historical_data_symbol-HDFC_period-1M.json  historical_data_symbol-INFY_period-3M.json  historical_data_symbol-RELIANCE_period-1Y.json  historical_data_symbol-TCS_period-6M.json  industry_search_query-Auto.json  industry_search_query-Banking.json  industry_search_query-IT.json  industry_search_query-Pharma.json  industry_search_query-Steel.json  mutual_fund_search_query-Axis.json  mutual_fund_search_query-Equity.json  mutual_fund_search_query-HDFC.json  mutual_fund_search_query-ICICI.json  mutual_fund_search_query-SBI.json  stock_details_symbol-HDFC.json  stock_details_symbol-INFY.json  stock_details_symbol-ITC.json  stock_details_symbol-RELIANCE.json  stock_details_symbol-TCS.json  stock_target_price_stock_id-3.json  stock_target_price_stock_id-RELIANCE.json  stock_target_price_stock_id-TCS.json  trending_stocks.json
